Resolve overflow on dog tiles and other formatting

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -52,7 +52,7 @@ h4,
 .all-dogs p {
     margin-left: 1rem;
     margin-right: 2rem;
-    
+
 }
 
 .blog h3 {
@@ -90,8 +90,6 @@ header {
     font-weight: bold;
 }
 
-
-
 header h1 {
     color: #008A00;
     font-style: italic;
@@ -106,21 +104,18 @@ header h1 {
 
 @media screen and (max-width: 1279px) {
     .hdr-left {
-        /* margin-top: 1rem; */
         margin-left: 2rem;
     }
 }
 
 @media screen and (max-width: 575px) {
     .hdr-left {
-        /* margin-top: 1rem; */
         margin-left: 1rem;
     }
 }
 
 
 .hdr-right {
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -130,14 +125,12 @@ header h1 {
 
 @media screen and (max-width: 1279px) {
     .hdr-right {
-        /* margin-top: 1rem; */
         margin-right: 2rem;
     }
 }
 
 @media screen and (max-width: 575px) {
     .hdr-right {
-        /* margin-top: .9rem; */
         margin-right: 1rem;
     }
 }
@@ -149,15 +142,10 @@ header p {
 }
 
 header img,
-header p
-
-/* ,
-header button */
-    {
+header p,
+header button {
     margin-top: .5%;
 }
-
-
 
 .cart {
     display: flex;
@@ -165,7 +153,6 @@ header button */
     justify-content: center;
     align-content: center;
     font-size: .8rem;
-
 }
 
 .cart img {
@@ -213,7 +200,6 @@ header button {
 
 @media screen and (max-width:575px) {
     header button {
-        /* width: 60%; */
         font-size: .8rem;
         padding: .5rem 2rem .5rem 2rem;
     }
@@ -248,7 +234,7 @@ footer a {
 
 nav li,
 nav a {
-    color:white;
+    color: white;
 }
 
 /* styling for home page */
@@ -286,13 +272,11 @@ nav a {
 .all-dogs {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(0, 32%));
-    grid-gap: 1% 1%;
+    grid-gap: 13px;
     margin-top: 1rem;
-    margin-bottom: 5rem;
-    /* overflow: auto; */
+    margin-bottom: 2rem;
 
 }
-
 
 .noshow {
     border: lightgray solid 3px;
@@ -341,7 +325,6 @@ nav a {
 .dogs img,
 .all-dogs img {
     width: 100%;
-    /* height: auto; */
 }
 
 /* formatting for blog column on home page */
@@ -408,10 +391,11 @@ aside img {
     text-align: center;
     color: black;
     font-weight: bold;
+    margin-top: 1rem;
 }
 
 .clear-more-dogs {
-    width:25%;
+    width: 25%;
     background-color: lightblue;
     padding: .75rem 1rem;
     text-align: center;
@@ -420,19 +404,23 @@ aside img {
 
 }
 
+@media screen and (max-width: 576px) {
+    .clear-more-dogs {
+        width: 75%;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 1279px) {
+
+    .clear-more-dogs {
+        width: 40%;
+    }
+}
+
 .center-button {
     margin: 0 auto;
     display: block;
 }
-
-/* .more-dogs a,
-.clear-dogs-more a {
-    text-decoration: none;
-    width: 100%;
-    color: rgb(20, 66, 109);
-    font-weight:bold;
-    height: 10%;
-} */
 
 /* styling for blog page */
 
@@ -443,7 +431,7 @@ aside img {
     grid-gap: 2% 5%;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    /* padding-right: 5rem; */
+
 }
 
 .blog:nth-child(1) {
@@ -484,7 +472,7 @@ input,
 select {
     display: block;
     padding-bottom: .75rem;
-    width: 200%;
+    width: 150%;
 }
 
 .location select {
@@ -600,7 +588,7 @@ footer ul {
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 footer a,
